// 应用交互消息定义.

//***************************************************************************
// 消息协议号 ： 服务端主动推送的以  BroadCast开头  如 xxx  ***********************
// 消息结构   ： server -> client 以 Response   如 BroadCastXXResponse结尾******
// 消息结构   ： server回复client  以 Response   如 xxxResponse 结尾  ***********
// 消息结构   ： client->server   以 Request    如 xxxRequest  结尾  ***********
//***************************************************************************

//*************************************************************************** 
//协议ID规则      : 0xXXZZZZ, 其中 XX 为服务ID头, ZZZZ为具体的协议ID, 示例如下 ****  
//保留id协议      : 0x00ZZZZ   *********************************************** 
//mainServer协议 : 0x01ZZZZ  主数据服务协议************************************
//accountSer协议 : 0x02ZZZZ  账号服务 协议 ************************************
//screenSer 协议 : 0x03ZZZZ  战斗服务 协议 ************************************
//taskServer协议 : 0x04ZZZZ  任务服务 协议 ************************************
//chatServer协议 : 0x05ZZZZ  聊天服务 协议 ************************************
//getaway   协议 : 0x06ZZZZ  网关服务 协议 ************************************
//ServiceMgr协议 : 0x09ZZZZ  服务管理 协议(客户端不能调用) **********************
//CTRlServer协议 : 0x0aZZZZ  控制服务 协议 ************************************ 
//**************************************************************************

syntax = "proto3";
package gameMessageCore;
option go_package = "./messageGo/proto";


enum EnvelopeType {    
    //保留id协议      : 0x00ZZZZ   *********************************************** 
    Unknown = 0;

    BroadCastTickOut                = 0x009999;    // 踢玩家下线

    //mainServer协议 : 0x01ZZZZ  主数据服务协议************************************
    ItemGet                         = 0x010001;
    ItemUse                         = 0x010003;
    ItemDrop                        = 0x010005;
    UpdateAvatar                    = 0x010007;
    UnloadAvatar                    = 0x010009;
    BroadCastItemAdd                = 0x010011;     // 添加道具
    BroadCastItemUpdate             = 0x010012;     // 更新道具
    BroadCastItemDel                = 0x010013;     // del道具
    BroadCastUpdateItemSlot         = 0x010014;     // 推送 玩家道具槽
    GetItemSlot                     = 0x010015;     // 查询 玩家道具槽信息
    UpgradeItemSlot                 = 0x010017;     // 升级 玩家道具槽
    SigninPlayer                    = 0x010019;     // 登录角色
    SignOutPlayer                   = 0x010021;     // 角色退出游戏
    UpgradePlayerLevel              = 0x010023;     // 手动点击升级
    QueryLands                      = 0x010025;     // 请求所有占地地块信息
    BroadCastInitLand               = 0x010027;     // 请求QueryLands后地块数据分批次推送  
    BroadCastInitItem               = 0x010029;     // 初始玩家道具数据     
    Build                           = 0x010031;     // 建造
    Recycling                       = 0x010033;     // 拆除
    Charged                         = 0x010035;     // 充电charged
    Harvest                         = 0x010037;     // 收获(harvest)自己建造物的产出(有电量的build) 
    Collection                      = 0x010039;     // 采集/偷取(collection) 他人的或者自己的没电量的建造物产出 
    BroadCastMultiUpLand            = 0x010041;     // 广播批量更新地格信息
    SelfNftBuilds                   = 0x010043;     // 请求自己所有的建造物
    BroadCastSelfBuildUpdate        = 0x010045;     // 广播更新建造物数据,只广播给owner
    BroadCastSelfBuildRecycling     = 0x010047;     // 广播移除ui界面中的建筑物,只广播给owner
    MintBattery                     = 0x010049;     // 使用token 购买电池(透传给 theweb3)
    QueryGranary                    = 0x010051;     // 查询仓库所有道具
    GranaryCollect                  = 0x010053;     // 取出仓库中的所有道具
    BroadCastGranaryUpdate          = 0x010055;     // 全量更新仓库数据
    BroadCastUpGranaryItem          = 0x010057;     // 更新仓库道具




    //accountSer协议 : 0x02ZZZZ  账号服务 协议 ************************************
    QueryPlayer                     = 0x020001;
    CreatePlayer                    = 0x020003;   

    //sceneSer 协议 : 0x03ZZZZ  战斗服务 协议 ************************************
    EnterMap                        = 0x030001;
    UpdateSelfLocation              = 0x030003;
    UseSkill                        = 0x030005;
    RespawnPlayer                   = 0x030009;
    BroadCastInitMapElement         = 0x030011;
    BroadCastMapEntityUpdate        = 0x030012;
    BroadCastEntityDestroy          = 0x030013;
    BroadCastEntityMove             = 0x030014;
    BroadCastEntityCombat           = 0x030015;
    BroadCastRespawnPlayer          = 0x030016;
    Teleport                        = 0x030017;
    BroadCastEntityProfileUpdate    = 0x030019;
    BroadCastMonsterDeath           = 0x030021;
    BroadCastEntityAvatarUpdate     = 0x030022;
    BroadCastEntityBattleDataUpdate = 0x030023;
    BroadCastEntityBuildDataUpdate  = 0x030025;
    PlayerActionCollect             = 0x030027;
    BroadCastPlayerActionCollect    = 0x030029;
    SceneDestruction                = 0x030033;
    BroadCastSceneDestruction       = 0x030035;
    PlayerActionChat                = 0x030037;
    BroadCastPlayerActionChat       = 0x030039;
    GetHomeData                     = 0x030041;
    QueryServerTime                 = 0x030043;       // 客户端请求服务器时间
    BroadCastChangeService          = 0x030045;
    HomeResourceOperate             = 0x030047;
    BroadCastHomeDataInitBatch      = 0x030049;


    //taskServer协议 : 0x04ZZZZ  任务服务 协议 ************************************
    SelfTasks                      = 0x040001;        // 查询玩家已接的任务列表（进行中状态）
    BroadCastUpdateTaskList        = 0x040003;        // 任务链进度更新(推送)
    AcceptTask                     = 0x040005;        // 领取任务
    AbandonmentTask                = 0x040007;        // 放弃任务(任务有保护时间)
    TaskReward                     = 0x040009;        // 获取任务奖励(附带提交任务功能)
    TaskListReward                 = 0x040011;        // 获取任务链奖励
    UpgradeTaskProgress            = 0x040013;        // 上报更新任务进度
    BroadCastTaskReward            = 0x040015;        // 推送获取的任务奖励

    
    //chatServer协议 : 0x05ZZZZ  聊天服务 协议 ************************************
    SendChatMessage                = 0x050001;      // 玩家发送聊天消息
    BroadCastChatMessages          = 0x050003;      // 批量推送的聊天消息
    BroadCastRemoveChatMessage     = 0x050004;
    BroadCastUpdateChatState       = 0x050005;



    //getaway   协议 : 0x06ZZZZ  网关服务 协议 ************************************
    Ping                = 0x060001;

    //ServiceMgr协议 : 0x09ZZZZ  服务管理 协议(客户端不能调用) **********************

    //CTRlServer协议 : 0x0aZZZZ  控制服务 协议 ************************************ 

}
